tests/snapshots/formats__coff-import__import-1.obj.snap
---
source: tests/formats.rs
expression: "common::explore(&name, &data)"
---
▾ import-1.obj — Import record: filly.dll!fillyfoal_answer (code, by name, hint 0)  [0x0+0x2f]
  ▾ Import Header  [0x0+0x14]
      Sig1: 0x0  [0x0+0x2]
      Sig2: 0xffff  [0x2+0x2]
      Version: 0  [0x4+0x2]
      Machine: AMD64 (0x8664)  [0x6+0x2]
      TimeDateStamp: 1970-01-01 00:00:00 UTC  [0x8+0x4]
      SizeOfData: 27  [0xc+0x4]
      OrdinalOrHint: 0  [0x10+0x2]
      Type: 0x4 — CODE, NAME  [0x12+0x2]
    Symbol: "fillyfoal_answer"  [0x14+0x11]
    DLL: "filly.dll"  [0x25+0xa]
