tests/snapshots/formats__coff-import__import-2.obj.snap
---
source: tests/formats.rs
expression: "common::explore(&name, &data)"
---
▾ import-2.obj — Import record: filly.dll!fillyfoal_data (data, by name, hint 0)  [0x0+0x2d]
  ▾ Import Header  [0x0+0x14]
      Sig1: 0x0  [0x0+0x2]
      Sig2: 0xffff  [0x2+0x2]
      Version: 0  [0x4+0x2]
      Machine: AMD64 (0x8664)  [0x6+0x2]
      TimeDateStamp: 1970-01-01 00:00:00 UTC  [0x8+0x4]
      SizeOfData: 25  [0xc+0x4]
      OrdinalOrHint: 0  [0x10+0x2]
      Type: 0x5 — DATA, NAME  [0x12+0x2]
    Symbol: "fillyfoal_data"  [0x14+0xf]
    DLL: "filly.dll"  [0x23+0xa]
